# fraud-ml-engine

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: anomaly_detection.yaml  experiment.yaml  model.yaml
configs/lstm/: config.yaml
data/classical/: .gitkeep
data/eda/: .gitkeep
docs/anomaly/: README.md
docs/api/: DEPLOYMENT_CHECKLIST.md  README.md
docs/classical/: README.md
docs/eda/: DEVELOPMENT.md  QUICKSTART.md  README.md
docs/explainability/: README.md  legacy_pyproject.toml
docs/feature_engineering/: README.md
docs/lstm/: README.md  legacy_pyproject.toml
examples/feature_engineering/: usage_example.py
notebooks/: 01-eda-exploration.ipynb  01_day1_fraud_detection_eda.ipynb  02-feature-engineering.ipynb  03-model-benchmark.ipynb  04-explainability-demo.ipynb  README.md  day2_imbalanced_learning.ipynb  day3_feature_engineering.ipynb  day5_lstm_autoencoder.ipynb  day6_anomaly_detection.ipynb  day7_model_explainability.ipynb
scripts/lstm/: evaluate.py  train.py
src/: __init__.py  pipeline.py
src/api/: main.py
src/cache/: redis_cache.py
src/core/: __init__.py  config.py  data_loader.py  metrics.py  model_base.py
src/eda/: __init__.py  app.py  callbacks.py  visualizations.py
src/explainability/: __init__.py  lime_explainer.py  shap_explainer.py  ui.py
src/feature_selection/: __init__.py  shap_selector.py
src/models/: __init__.py  (+1 more)
tests/: pytest.ini.template  test_anomaly.py  test_api.py  test_core.py  test_eda.py  test_explainability.py  test_lstm.py
(+147 files in other folders)
